--- a/members.html
+++ b/members.html
@@ -26,9 +26,7 @@ February 5, 2021
 			</div>
 			<div class="topbar-right">
 				<div class="social">
-					<a href=""><i class="fab fa-twitter-square"></i></a>
 					<a href=""><i class="fab fa-facebook-square"></i></a>
-					<a href=""><i class="fab fa-linkedin"></i></a>
 					<a href=""><i class="fab fa-instagram"></i></a>
 					<a href=""><i class="fab fa-youtube-square"></i></a>
 				</div>
@@ -87,7 +85,7 @@ February 5, 2021
 					<div class="right">
 						<p>
 							Co-Founder of Euphoria <br>
-							Member Since: I dunno <br>
+							Member Since:  <br>
 							Bio: 
 						</p>
 					</div>
@@ -99,11 +97,11 @@ February 5, 2021
 			<div class="inside">
 				<div class="kendrick">
 					<div class="left">
-						<h1> Queen Weezal </h1>
+						<h1> The Wackman </h1>
 						<div class="imgbox">
-							<img src="img/self-kendrick3.jpg" height="400vw">
-							<img src="img/self-kendrick2.jpg" height="400vw">
-							<img src="img/self-kendrick4.jpg" height="400vw">
+							<img src="img/self-simon1.jpg" height="400vw">
+							<img src="img/self-simon4.jpg" height="400vw">
+							<img src="img/self-simon3.jpg" height="400vw">
 						</div>	
 					</div>
 					<div class="right">
@@ -119,11 +117,11 @@ February 5, 2021
 			<div class="inside">
 				<div class="kendrick">
 					<div class="left">
-						<h1> Queen Weezal </h1>
+						<h1> Short Scale </h1>
 						<div class="imgbox">
-							<img src="img/self-kendrick3.jpg" height="400vw">
-							<img src="img/self-kendrick2.jpg" height="400vw">
-							<img src="img/self-kendrick4.jpg" height="400vw">
+							<img src="img/self-koda.jpg" height="400vw">
+							<img src="img/self-koda2.jpg" height="400vw">
+							<img src="img/self-koda3.jpg" height="400vw">
 						</div>	
 					</div>
 					<div class="right">
@@ -139,11 +137,9 @@ February 5, 2021
 			<div class="inside">
 				<div class="kendrick">
 					<div class="left">
-						<h1> Queen Weezal </h1>
+						<h1> Nickname </h1>
 						<div class="imgbox">
-							<img src="img/self-kendrick3.jpg" height="400vw">
-							<img src="img/self-kendrick2.jpg" height="400vw">
-							<img src="img/self-kendrick4.jpg" height="400vw">
+							<img src="img/self-drummer.jpg" height="400vw">
 						</div>	
 					</div>
 					<div class="right">
@@ -175,6 +171,18 @@ February 5, 2021
               });
             }
         </script>
+		
+		<!--JS for mobile nav menu-->
+		<script>
+			function myFunction() {
+				var x = document.getElementById("myLinks");
+				if (x.style.display === "block") {
+					x.style.display = "none";
+				} else {
+					x.style.display = "block";
+				}
+			}
+		</script>
 
 
 
